--- a/SanJuanSaludAPP/www/index.html
+++ b/SanJuanSaludAPP/www/index.html
@@ -5,30 +5,85 @@
         Personalice la directiva de seguridad de contenido en la etiqueta meta como sea necesario. Agregue "unsafe-inline" a default-src para permitir JavaScript insertado.
         Para obtener más detalles, consulte http://go.microsoft.com/fwlink/?LinkID=617521
     -->
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
+       <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *"> -->
         
         <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+        <!--CSS principal-->
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <!--bootstrap-->
+        <link rel="stylesheet" href="bootstrap/css/bootstrap.paper.min.css">
+        <!--Slick-->
+        <link rel="stylesheet" href="slick/slick.css">
+        <link rel="stylesheet" href="slick/slick-theme.css">
+
         <title>SanJuanSaludAPP</title>
     </head>
     <body>
         <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Conectando con el dispositivo</p>
-                <p class="event received">El dispositivo está preparado</p>
+
+            <div class="container">
+
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" id="mainBanner">
+                        <img src="images/mainBanner.svg" alt="">
+                    </div>
+                </div>
+
+                <div class="row">
+
+                    <div class="slide">
+
+
+                            <div class="panel panel-default">
+                                <div class="panel-body">
+                                    Panel content
+                                </div>
+                                <div class="panel-footer">Peste esuno</div>
+                            </div>
+
+                            <div class="panel panel-default">
+                                <div class="panel-body">
+                                    Panel content
+                                </div>
+                                <div class="panel-footer">Peste esuno</div>
+                            </div>
+
+
+
+                            <div class="panel panel-default">
+                                <div class="panel-body">
+                                    Panel content
+                                </div>
+                                <div class="panel-footer">Peste esuno</div>
+                            </div>
+
+
+
+                    </div>
+
+                </div>
+
+
             </div>
+
+
         </div>
+
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="scripts/platformOverrides.js"></script>
-        <script type="text/javascript" src="scripts/index.js"></script>
+        <!--JS jquery-->
         <script type="text/javascript" src="jquery/jquery-3.2.1.min.js"></script>
-        <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+        <!--JS bootstrap-->
+        <script src="bootstrap/js/bootstrap.min.js"></script>
+        <!--JS Slick-->
+        <script src="slick/slick.min.js"></script>
+        <!--JS usuario-->
+        <script type="text/javascript" src="scripts/index.js"></script>
         <script type="text/javascript" src="scripts/func.js"></script>
+
     </body>
 </html>
