con nuevo diseño

--- a/SanJuanSaludAPP/www/index.html
+++ b/SanJuanSaludAPP/www/index.html
@@ -27,45 +27,120 @@
 
             <div class="container">
 
+                <!--banner-->
+
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" id="mainBanner">
                         <img src="images/mainBanner.svg" alt="">
                     </div>
                 </div>
 
+                <!--FIN banner-->
+
+                <!--espaciador-->
+
+                <div class="row spacer"></div>
+
+                <!--FIN espaciador-->
+
+                <!--slide-->
+
                 <div class="row">
 
                     <div class="slide">
 
-
-                            <div class="panel panel-default">
-                                <div class="panel-body">
-                                    Panel content
-                                </div>
-                                <div class="panel-footer">Peste esuno</div>
+                        <div class="cover-card col-sm-12 img-thumbnail" style="background: url(http://sanjuan.gov.ar/recursos/2EF0EA67C0DCA570288BBB76394DADDD.jpeg) no-repeat center top;background-size:cover;">
+                            <div class="overlay">
+                                <p>
+                                    Text Caption
+                                </p>
                             </div>
+                        </div>
 
-                            <div class="panel panel-default">
-                                <div class="panel-body">
-                                    Panel content
-                                </div>
-                                <div class="panel-footer">Peste esuno</div>
+
+                        <div class="cover-card col-sm-12 img-thumbnail" style="background: url(https://estudiantesvirtuales.files.wordpress.com/2015/08/cubo-coso.png) no-repeat center top;background-size:cover;">
+                            <div class="overlay">
+                                <p>
+                                    Text asfasdfasdfasdfasdf afd asdfas dfasd fas fasd fsd fCaption
+                                </p>
                             </div>
+                        </div>
 
-
-
-                            <div class="panel panel-default">
-                                <div class="panel-body">
-                                    Panel content
-                                </div>
-                                <div class="panel-footer">Peste esuno</div>
+                        <div class="cover-card col-sm-12 img-thumbnail" style="background: url(http://sanjuan.gov.ar/recursos/2EF0EA67C0DCA570288BBB76394DADDD.jpeg) no-repeat center top;background-size:cover;">
+                            <div class="overlay">
+                                <p>
+                                    Text Caption
+                                </p>
                             </div>
-
+                        </div>
 
 
                     </div>
 
                 </div>
+
+                <!--FIN slide-->
+
+                <!--espaciador-->
+
+                <div class="row spacer"></div>
+
+                <!--FIN espaciador-->
+
+                <!--botonera-->
+
+                <div class="row botonera">
+
+                    <!--botones cuadrados-->
+                    <div class="row">
+
+                        <div class="col-xs-5 col-sm-5 btn btn-primary boton boton-cuadrado">
+                            <span>CENTROS DE SALUD</span>
+                        </div>
+
+                        <div class="col-xs-2 col-sm-2"></div>
+
+                        <div class="col-xs-5 col-sm-5 btn btn-primary boton boton-cuadrado">
+                            PROTUR
+                        </div>
+                    </div>
+
+                    <!--FIN botones cuadrados-->
+
+                    <!--espaciador-->
+
+                    <div class="row spacer"></div>
+
+                    <!--FIN espaciador-->
+
+                    <!--botón largo-->
+
+                    <div class="row">
+
+                        <div class="col-xs-12 col-sm-12 btn btn-primary boton boton-largo">
+                            <span>ayuda</span>
+                        </div>
+
+                    </div>
+
+                    <!--FIN botón largo-->
+
+
+
+                </div>
+
+                <!--FIN botonera-->
+
+                <!--footer-->
+
+                <footer class="footer">
+                    <div class="container">
+                        <span class="text-muted">División Informática, Ministerio de Salud de la provincia de San Juan.</span>
+                    </div>
+                </footer>
+
+
+                <!--FIN footer-->
 
 
             </div>
