--- a/SanJuanSaludAPP/www/index.html
+++ b/SanJuanSaludAPP/www/index.html
@@ -22,10 +22,16 @@
 
         <title>SanJuanSaludAPP</title>
     </head>
+
     <body>
+
         <div class="app">
 
             <div class="container">
+                <div class="row">
+                    <canvas style="width:100%;height:400px" id="map_canvas" ></canvas>
+                </div>
+
 
                 <!--banner-->
 
@@ -45,34 +51,11 @@
 
                 <!--slide-->
 
-                <div class="row">
+                <div class="row" >
 
-                    <div class="slide">
+                    <div id="slider" class="slide">
 
-                        <div class="cover-card col-sm-12 img-thumbnail" style="background: url(http://sanjuan.gov.ar/recursos/2EF0EA67C0DCA570288BBB76394DADDD.jpeg) no-repeat center top;background-size:cover;">
-                            <div class="overlay">
-                                <p>
-                                    Text Caption
-                                </p>
-                            </div>
-                        </div>
-
-
-                        <div class="cover-card col-sm-12 img-thumbnail" style="background: url(https://estudiantesvirtuales.files.wordpress.com/2015/08/cubo-coso.png) no-repeat center top;background-size:cover;">
-                            <div class="overlay">
-                                <p>
-                                    Text asfasdfasdfasdfasdf afd asdfas dfasd fas fasd fsd fCaption
-                                </p>
-                            </div>
-                        </div>
-
-                        <div class="cover-card col-sm-12 img-thumbnail" style="background: url(http://sanjuan.gov.ar/recursos/2EF0EA67C0DCA570288BBB76394DADDD.jpeg) no-repeat center top;background-size:cover;">
-                            <div class="overlay">
-                                <p>
-                                    Text Caption
-                                </p>
-                            </div>
-                        </div>
+                        /*AJAX*/
 
 
                     </div>
