--- a/SanJuanSaludAPP/www/index.html
+++ b/SanJuanSaludAPP/www/index.html
@@ -25,13 +25,13 @@
 
     <body>
 
-        <div class="app">
+        <div class="asd">
 
-            <div class="container">
+            <div class="container"><!--
                 <div class="row">
                     <canvas style="width:100%;height:400px" id="map_canvas" ></canvas>
                 </div>
-
+-->
 
                 <!--banner-->
 
@@ -51,11 +51,11 @@
 
                 <!--slide-->
 
-                <div class="row" >
+                <div class="row" id="slideContainer">
 
                     <div id="slider" class="slide">
 
-                        /*AJAX*/
+                        <!--AJAX-->
 
 
                     </div>
@@ -64,11 +64,7 @@
 
                 <!--FIN slide-->
 
-                <!--espaciador-->
 
-                <div class="row spacer"></div>
-
-                <!--FIN espaciador-->
 
                 <!--botonera-->
 
@@ -77,14 +73,46 @@
                     <!--botones cuadrados-->
                     <div class="row">
 
-                        <div class="col-xs-5 col-sm-5 btn btn-primary boton boton-cuadrado">
-                            <span>CENTROS DE SALUD</span>
+                        <div class="col-xs-5 col-sm-5 btn btn-default boton boton-cuadrado">
+
+                            <table>
+                                <tr class="btnIcon">
+                                    <th>
+
+                                        <img class="btnImg" src="images/btnMap.svg" alt="">
+                                    </th>
+                                </tr>
+                                <tr class="btnText">
+                                    <td>
+
+                                        <span>CENTROS DE SALUD</span>
+                                    </td>
+                                </tr>
+                            </table>
+
                         </div>
 
                         <div class="col-xs-2 col-sm-2"></div>
 
-                        <div class="col-xs-5 col-sm-5 btn btn-primary boton boton-cuadrado">
-                            PROTUR
+                        <div class="col-xs-5 col-sm-5 btn btn-default boton boton-cuadrado">
+
+                            <table>
+                                <tr class="btnIcon">
+                                    <th>
+
+                                        <img class="btnImg" src="images/btnProtur.svg" alt="">
+                                    </th>
+                                </tr>
+                                <tr class="btnText">
+                                    <td>
+
+                                        <span>TURNOS PROGRAMADOS</span>
+                                    </td>
+                                </tr>
+                            </table>
+
+
+
                         </div>
                     </div>
 
@@ -100,7 +128,7 @@
 
                     <div class="row">
 
-                        <div class="col-xs-12 col-sm-12 btn btn-primary boton boton-largo">
+                        <div class="col-xs-12 col-sm-12 btn btn-default boton boton-largo">
                             <span>ayuda</span>
                         </div>
 
