con ventana departamentos

--- a/SanJuanSaludAPP/www/index.html
+++ b/SanJuanSaludAPP/www/index.html
@@ -71,49 +71,21 @@
                 <div class="row botonera">
 
                     <!--botones cuadrados-->
-                    <div class="row">
-
-                        <div class="col-xs-5 col-sm-5 btn btn-default boton boton-cuadrado">
-
-                            <table>
-                                <tr class="btnIcon">
-                                    <th>
-
-                                        <img class="btnImg" src="images/btnMap.svg" alt="">
-                                    </th>
-                                </tr>
-                                <tr class="btnText">
-                                    <td>
-
-                                        <span>CENTROS DE SALUD</span>
-                                    </td>
-                                </tr>
-                            </table>
-
-                        </div>
-
-                        <div class="col-xs-2 col-sm-2"></div>
-
-                        <div class="col-xs-5 col-sm-5 btn btn-default boton boton-cuadrado">
-
-                            <table>
-                                <tr class="btnIcon">
-                                    <th>
-
-                                        <img class="btnImg" src="images/btnProtur.svg" alt="">
-                                    </th>
-                                </tr>
-                                <tr class="btnText">
-                                    <td>
-
-                                        <span>TURNOS PROGRAMADOS</span>
-                                    </td>
-                                </tr>
-                            </table>
+                    <div class="row center-block">
 
 
+                        <a id="bntCSalud" class=" col-xs-5 col-sm-5 btn btn-default btn-sq-lg boton">
+                            <img class="btnImg" src="images/btnMap.svg" alt=""><br/>
+                            CENTROS DE SALUD
+                        </a>
 
-                        </div>
+
+                        <a href="#" class=" col-xs-5 col-sm-5 btn btn-default btn-sq-lg boton">
+                            <img class="btnImg" src="images/btnProtur.svg" alt=""><br/>
+                            PROTUR
+                        </a>
+
+
                     </div>
 
                     <!--FIN botones cuadrados-->
@@ -128,9 +100,10 @@
 
                     <div class="row">
 
-                        <div class="col-xs-12 col-sm-12 btn btn-default boton boton-largo">
-                            <span>ayuda</span>
-                        </div>
+
+                            <a href="#" class="btn btn-block btn-default boton boton-largo"><span class="glyphicon"><img class="btnImg" src="images/btnHelp.svg" alt=""></span> ayuda</a>
+                            <!--c-->
+
 
                     </div>
 
