con ventana mapa

--- a/SanJuanSaludAPP/www/departamentos.html
+++ b/SanJuanSaludAPP/www/departamentos.html
@@ -1,18 +1,9 @@
-<div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" id="mainBanner">
-        <img src="images/mainBanner.svg" alt="">
-        <span>Elija un departamento</span>
-    </div>
-</div>
 
 <div class="container">
 
+    <a href="#" class="btn btn-block btn-default boton boton-largo"><span class="glyphicon"><img class="btnImg" src="images/btnHelp.svg" alt=""></span> departamento</a>
+    <!--c-->
+
 
 </div>
 
-
-<footer class="footer">
-    <div class="container">
-        <span class="text-muted">División Informática, Ministerio de Salud de la provincia de San Juan.</span>
-    </div>
-</footer>
