--- a/SanJuanSaludAPP/www/index.html
+++ b/SanJuanSaludAPP/www/index.html
@@ -27,7 +27,7 @@
 
         <div class="asd">
 
-            <div class="container"><!--
+            <div class="container" id="mainContainer"><!--
                 <div class="row">
                     <canvas style="width:100%;height:400px" id="map_canvas" ></canvas>
                 </div>
@@ -84,7 +84,6 @@
                             <img class="btnImg" src="images/btnProtur.svg" alt=""><br/>
                             PROTUR
                         </a>
-
 
                     </div>
 
