--- a/SanJuanSaludAPP/www/mapa.html
+++ b/SanJuanSaludAPP/www/mapa.html
@@ -1,10 +1,8 @@
-<div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" id="mainBanner">
-        <img src="images/mainBanner.svg" alt="">
-    </div>
-</div>
 
 <div class="container">
+
+    <a href="#" class="btn btn-block btn-default boton boton-largo"><span class="glyphicon"><img class="btnImg" src="images/btnHelp.svg" alt=""></span> ayuda</a>
+    <!--c-->
 
 
 </div>
