--- a/SanJuanSaludAPP/www/index.html
+++ b/SanJuanSaludAPP/www/index.html
@@ -19,14 +19,12 @@
         <link rel = "stylesheet"
               href = "https://cdnjs.cloudflare.com/ajax/libs/framework7/1.6.4/css/framework7.material.colors.min.css" />
         <link rel="stylesheet" href="node_modules/framework7-icons/css/framework7-icons.css">
-        <!--JS Slick-->
-        <script src="slick/slick.min.js"></script>
+
+
         <!--CSS principal-->
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <!--Slick-->
-        <link rel="stylesheet" href="slick/slick.css">
-        <link rel="stylesheet" href="slick/slick-theme.css">
+
 
 
         <title>SanJuanSaludAPP</title>
@@ -61,12 +59,13 @@
                                     <!-- Slider container -->
                                     <div class="swiper-container">
                                         <!-- Slides wrapper -->
-                                        <div class="swiper-wrapper">
-                                            <!-- Slides -->
+                                        <div id="slide" class="swiper-wrapper">
+                                            <!--
+                                            Slides
                                             <div class="swiper-slide">Slide 1</div>
                                             <div class="swiper-slide">Slide 2</div>
                                             <div class="swiper-slide">Slide 3</div>
-                                            ... other slides ...
+                                            -->
                                         </div>
                                         <!-- Pagination, if required -->
                                         <div class="swiper-pagination"></div>
