--- a/SanJuanSaludAPP/www/index.html
+++ b/SanJuanSaludAPP/www/index.html
@@ -14,11 +14,9 @@
         <!--JS jquery-->
         <script type="text/javascript" src="jquery/jquery-3.2.1.min.js"></script>
         <!--framework7-->
-        <link rel = "stylesheet"
-              href = "https://cdnjs.cloudflare.com/ajax/libs/framework7/1.6.4/css/framework7.material.css" />
-        <link rel = "stylesheet"
-              href = "https://cdnjs.cloudflare.com/ajax/libs/framework7/1.6.4/css/framework7.material.colors.min.css" />
-        <link rel="stylesheet" href="node_modules/framework7-icons/css/framework7-icons.css">
+        <link rel = "stylesheet" href = "css/framework7-material.css" />
+        <link rel = "stylesheet" href = "css/framework7-colors.css" />
+
 
 
         <!--CSS principal-->
@@ -99,8 +97,7 @@
 
 
 
-        <script type = "text/javascript"
-                src = "https://cdnjs.cloudflare.com/ajax/libs/framework7/1.4.2/js/framework7.min.js"></script>
+        <script type = "text/javascript" src = "scripts/framework7.js"></script>
 
         <script>
             // here initialize the app
@@ -117,12 +114,7 @@
             });
 
 
-            var mySwiper = myApp.swiper('.swiper-container', {
-                pagination:'.swiper-pagination',
-                speed: 600,
-                spaceBetween: 100,
-                autoplay: 4000
-            });
+
 
 
 
