con el modal de departamentos

--- a/SanJuanSaludAPP/www/departamentos.html
+++ b/SanJuanSaludAPP/www/departamentos.html
@@ -1,9 +1,12 @@
+<div class="pages " data-ignore-cache="true">
+    <div class="page no-navbar">
+        <div class="page-content">
+            <div class="content-block">
+                <p>
+                    cosorttrfhy
+                </p>
 
-<div class="container">
-
-    <a href="#" class="btn btn-block btn-default boton boton-largo"><span class="glyphicon"><img class="btnImg" src="images/btnHelp.svg" alt=""></span> departamento</a>
-    <!--c-->
-
-
+            </div>
+        </div>
+    </div>
 </div>
-
