--- a/SanJuanSaludAPP/www/index.html
+++ b/SanJuanSaludAPP/www/index.html
@@ -31,7 +31,11 @@
     <body class="theme-deeporange">
 
     <div class="views">
+
+
         <div class="view view-main">
+
+
 
             <div class = "navbar">
                 <div class = "navbar-inner">
@@ -89,12 +93,11 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
+
+
     </div>
-
-
 
 
         <script type = "text/javascript" src = "scripts/framework7.js"></script>
@@ -114,13 +117,23 @@
             });
 
 
-
-
-
-
-
-
         </script>
+
+
+    <!-- Links popover -->
+    <div class="popover popover-links">
+        <div class="popover-angle"></div>
+        <div class="popover-inner">
+            <div class="list-block">
+                <ul>
+                    <li><a href="#" id="btnGPS" class="close-popover list-button item-link">Ubicar con mi dispositivo</a></li>
+                    <li><a href="departamentos.html" id="btnDepto" data-view=".view-main" class="close-popover list-button item-link">Elegir por departamento</a></li>
+
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!--FIN Links popover -->
 
     </body>
 
