--- a/SanJuanSaludAPP/www/departamentos.html
+++ b/SanJuanSaludAPP/www/departamentos.html
@@ -2,9 +2,15 @@
     <div class="page no-navbar">
         <div class="page-content">
             <div class="content-block">
-                <p>
-                    cosorttrfhy
-                </p>
+                <h3>Elija un departamento:</h3>
+
+                <a href="#"  class="back button button-fill button-raised boton-chico">Departamento </a><br>
+                <a href="#"  class="button button-fill button-raised boton-chico">Departamento </a><br>
+                <a href="#"  class="button button-fill button-raised boton-chico">Departamento </a><br>
+                <a href="#"  class="button button-fill button-raised boton-chico">Departamento </a><br>
+                <a href="#"  class="button button-fill button-raised boton-chico">Departamento </a><br>
+                <a href="#"  class="button button-fill button-raised boton-chico">Departamento </a><br>
+                <a href="#"  class="button button-fill button-raised boton-chico">Departamento </a><br>
 
             </div>
         </div>
