--- a/SanJuanSaludAPP/www/formularioProtur.html
+++ b/SanJuanSaludAPP/www/formularioProtur.html
@@ -1,6 +1,8 @@
 <div class="popup">
     <div class="content-block">
 
+        <h4>Ingrese sus datos y un programador de turnos se comunicará con usted.</h4>
+
         <div class="list-block">
             <ul>
                 <!-- Text inputs -->
@@ -20,7 +22,30 @@
                         <div class="item-media"><i class="icon f7-icons">email</i></div>
                         <div class="item-inner">
                             <div class="item-input">
-                                <input type="email" placeholder="E-mail">
+                                <input type="email" placeholder="Correo electrónico">
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <!--Teléfono-->
+                <li>
+                    <div class="item-content">
+                        <div class="item-media"><i class="icon f7-icons">telephone</i></div>
+                        <div class="item-inner">
+                            <div class="item-input">
+                                <input class="asdf" type="email" placeholder="Teléfono">
+                            </div>
+                        </div>
+                    </div>
+                </li>
+
+                <!--Otro Teléfono-->
+                <li>
+                    <div class="item-content">
+                        <div class="item-media"><i class="icon f7-icons">telephone</i></div>
+                        <div class="item-inner">
+                            <div class="item-input">
+                                <input type="email" placeholder="Otro teléfono (Si es posible)">
                             </div>
                         </div>
                     </div>
@@ -31,11 +56,12 @@
                     <div class="item-content">
                         <div class="item-media"><i class="icon f7-icons">persons</i></div>
                         <div class="item-inner">
-                            <div class="item-title label">Sexo</div>
+
                             <div class="item-input">
                                 <select>
                                     <option>Masculino</option>
                                     <option>Femenino</option>
+                                    <option>Otra identidad</option>
                                 </select>
                             </div>
                         </div>
@@ -66,8 +92,11 @@
                     </div>
                 </li>
             </ul>
-            <a href="#"  class="close-popup button button-fill button-raised boton-chico">Volver </a>
 
+            <p class="buttons-row">
+                <a href="#"  class="close-popup button button-fill button-raised boton-chico">Volver </a>
+                <a href="#"  class="button button-fill button-raised boton-chico">Enviar </a>
+            </p>
 
 
     </div>
