ya dominando las vistas

--- a/SanJuanSaludAPP/www/departamentos.html
+++ b/SanJuanSaludAPP/www/departamentos.html
@@ -4,7 +4,7 @@
             <div class="content-block">
                 <h3>Elija un departamento:</h3>
 
-                <a href="#"  class="back button button-fill button-raised boton-chico">Departamento </a><br>
+                <a href="#"  class="back button button-fill button-raised boton-chico">Volver </a><br>
                 <a href="#"  class="button button-fill button-raised boton-chico">Departamento </a><br>
                 <a href="#"  class="button button-fill button-raised boton-chico">Departamento </a><br>
                 <a href="#"  class="button button-fill button-raised boton-chico">Departamento </a><br>
