--- a/SanJuanSaludAPP/www/index.html
+++ b/SanJuanSaludAPP/www/index.html
@@ -77,13 +77,13 @@
                             </div>
 
                                 <p class="buttons-row">
-                                    <a href="#" id="btnCentros" data-ignore-cache="true" class="button button-fill button-raised boton" >
+                                    <a href="#" id="btnCentros" data-ignore-cache="true" class="ac-3 button button-fill button-raised boton" >
                                         
-                                        <span>Centros de Salud <br> <img src="images/btnMap.svg" alt=""></span>
+                                        <span><br>Centros <br>de Salud <br> <br><img src="images/btnMap.svg" alt=""></span>
                                     </a>
 
                                     <a href="#" id="btnProtur" data-ignore-cache="true" class="button button-fill button-raised boton">
-                                        <span>Programar turno<br> <img src="images/btnProtur.svg" alt=""></span>
+                                        <span><br>Programar <br>turno<br> <br><img src="images/btnProtur.svg" alt=""></span>
                                     </a>
                                 </p>
 
@@ -118,6 +118,7 @@
 
             // Add the view
             var mainView = myApp.addView('.view-main', {
+                main: true
             });
 
 
