--- a/SanJuanSaludAPP/www/formularioProtur.html
+++ b/SanJuanSaludAPP/www/formularioProtur.html
@@ -51,28 +51,49 @@
                     </div>
                 </li>
 
-                <!-- Select -->
-                <li>
-                    <div class="item-content">
-                        <div class="item-media"><i class="icon f7-icons">persons</i></div>
-                        <div class="item-inner">
+                <!-- Sexo -->
 
-                            <div class="item-input">
-                                <select>
-                                    <option>Masculino</option>
-                                    <option>Femenino</option>
-                                    <option>Otra identidad</option>
-                                </select>
-                            </div>
+                <li>
+                    <label class="label-radio item-content">
+                        <input type="radio" name="my-radio" value="F">
+                        <div class="item-media">
+                            <i class="icon icon-form-radio"></i>
                         </div>
-                    </div>
+                        <div class="item-inner">
+                            <div class="item-title">Femenino</div>
+                        </div>
+                    </label>
+                </li>
+                <li>
+                    <label class="label-radio item-content">
+
+                        <input type="radio" name="my-radio" value="F">
+                        <div class="item-media">
+                            <i class="icon icon-form-radio"></i>
+                        </div>
+                        <div class="item-inner">
+                            <div class="item-title">Masculino</div>
+                        </div>
+                    </label>
+                </li>
+                <li>
+                    <label class="label-radio item-content">
+
+                        <input type="radio" name="my-radio" value="F">
+                        <div class="item-media">
+                            <i class="icon icon-form-radio"></i>
+                        </div>
+                        <div class="item-inner">
+                            <div class="item-title">Otra identidad</div>
+                        </div>
+                    </label>
                 </li>
                 <!-- Date -->
                 <li>
                     <div class="item-content">
-                        <div class="item-media"><i class="icon f7-icons">calendar</i></div>
+                        <!--<div class="item-media"><i class="icon f7-icons">calendar</i></div>-->
                         <div class="item-inner">
-                            <div class="item-title label">Nacimiento</div>
+                            <div class="item-title label">Nacimiento:</div>
                             <div class="item-input">
                                 <input type="date" placeholder="Nacimiento" >
                             </div>
@@ -82,9 +103,9 @@
                 <!-- Textarea -->
                 <li class="align-top">
                     <div class="item-content">
-                        <div class="item-media"><i class="icon f7-icons">chat</i></div>
+                        <!--<div class="item-media"><i class="icon f7-icons">chat</i></div>-->
                         <div class="item-inner">
-                            <div class="item-title label">Comentarios</div>
+                            <div class="item-title label">Comentarios:</div><br>
                             <div class="item-input">
                                 <textarea></textarea>
                             </div>
