--- a/SanJuanSaludAPP/www/index.html
+++ b/SanJuanSaludAPP/www/index.html
@@ -100,6 +100,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
 
@@ -118,7 +119,8 @@
 
             // Add the view
             var mainView = myApp.addView('.view-main', {
-                main: true
+                main: true,
+                material: true
             });
 
 
