--- a/SanJuanSaludAPP/www/caps.html
+++ b/SanJuanSaludAPP/www/caps.html
@@ -1,9 +1,9 @@
 <div class="pages"  data-ignore-cache="true">
-    <div class="page no-navbar" data-page="departamentos">
+    <div class="page no-navbar" data-page="caps">
         <div class="page-content">
             <div class="content-block">
-                <h3 class="color-h3">Elija un departamento:</h3>
-                <div id="dptos-container">
+                <h3 class="color-h3">Elija un CAPS:</h3>
+                <div id="caps-container">
                     <a href="#"  class="back button button-fill button-raised boton-chico">Volver </a><br>
                 </div>
             </div>
@@ -13,4 +13,3 @@
 
 
 
-departamentos.html
