--- a/SanJuanSaludAPP/www/GPS.html
+++ b/SanJuanSaludAPP/www/GPS.html
@@ -1,12 +1,12 @@
 <div class="pages " data-ignore-cache="true">
-    <div class="page no-navbar">
+    <div class="page no-navbar" data-page="mapa">
         <div class="page-content">
             <div class="content-block">
-                <h3>Google Maps:</h3>
+                <h3 class="color-h3">Google Maps:</h3>
 
                 <a href="#"  class="back button button-fill button-raised boton-chico">Volver </a><br>
 
-
+                <div id="googleMap" style="width:100%;height:400px;"></div>
             </div>
         </div>
     </div>
