--- a/SanJuanSaludAPP/www/index.html
+++ b/SanJuanSaludAPP/www/index.html
@@ -6,13 +6,13 @@
         Para obtener más detalles, consulte http://go.microsoft.com/fwlink/?LinkID=617521
     -->
        <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *"> -->
-        
+
         <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <!--JS jquery-->
-        <script type="text/javascript" src="jquery/jquery-3.2.1.min.js"></script>
+
         <!--framework7-->
         <link rel = "stylesheet" href = "css/framework7-material.css" />
         <link rel = "stylesheet" href = "css/framework7-colors.css" />
@@ -30,6 +30,7 @@
     </head>
 
     <body class="theme-white">
+
         <div class="statusbar-overlay"></div>
 
     <div class="views">
@@ -109,23 +110,7 @@
     </div>
 
 
-        <script type = "text/javascript" src = "scripts/framework7.js"></script>
 
-        <script>
-            // here initialize the app
-            var myApp = new Framework7();
-
-            // If your using custom DOM library, then save it to $$ variable
-            var $$ = Dom7;
-
-            // Add the view
-            var mainView = myApp.addView('.view-main', {
-                main: true,
-                material: true
-            });
-
-
-        </script>
 
 
     <!-- Links popover -->
@@ -146,10 +131,16 @@
     </body>
 
     <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="scripts/platformOverrides.js"></script>
-
+    <script type = "text/javascript" src = "scripts/framework7.js"></script>
+    <script type="text/javascript" src="jquery/jquery-3.2.1.min.js"></script>
     <!--JS usuario-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZK0bGv6wCVNOpLiLRLgV_hy8B-Y07pp4"></script>
+
     <script type="text/javascript" src="scripts/index.js"></script>
     <script type="text/javascript" src="scripts/func.js"></script>
     <script type="text/javascript" src="scripts/view.js"></script>
+
+
+
+
 </html>
