listas en vez de botones

--- a/SanJuanSaludAPP/www/departamentos.html
+++ b/SanJuanSaludAPP/www/departamentos.html
@@ -3,9 +3,18 @@
         <div class="page-content">
             <div class="content-block">
                 <h3 class="color-h3">Elija un departamento:</h3>
-                <div id="dptos-container">
-                    <a href="#" class="back button button-fill button-raised boton-chico">Volver </a><br>
+
+                <a href="#"  class="back button button-fill button-raised boton-chico">Volver </a><br>
+
+                <div class="list-block listaBlanca">
+
+                    <ul  id="dptos-container" >
+
+
+                    </ul>
+
                 </div>
+
             </div>
         </div>
     </div>
