acordeón y vista por zona

--- a/SanJuanSaludAPP/www/capsDetail.html
+++ b/SanJuanSaludAPP/www/capsDetail.html
@@ -7,8 +7,10 @@
 
 
                     <div id="caps-basic" style="color: #fff;"> </div>
-                    <div id="caps-eyh" style="color: #fff;">
-                        <h3 class="color-h3">Especialidades y Horarios</h3>
+                    <div id="caps-eyh" class="list-block accordion-list" style="color: #fff;">
+                        <h3 class="color-h3 ">Seleccione una especialidad para consultar horarios:</h3>
+
+                        <!--acá van los caps con append por jquery-->
                     </div>
                     <div id="caps-lc" style="color: #fff;">
                         <h3 class="color-h3">Líneas de Colectivo disponibles</h3>
