con navbar en cada menu

--- a/SanJuanSaludAPP/www/ayuda.html
+++ b/SanJuanSaludAPP/www/ayuda.html
@@ -1,13 +1,31 @@
-<div class="popup">
-    <div class="content-block">
-        <h3>Ayuda</h3>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquam assumenda eligendi, expedita illo labore nostrum quos soluta sunt voluptatibus? Animi consectetur, corporis cupiditate dolor ex in numquam tempore tenetur!
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquam assumenda eligendi, expedita illo labore nostrum quos soluta sunt voluptatibus? Animi consectetur, corporis cupiditate dolor ex in numquam tempore tenetur! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid commodi consequatur dolores ducimus error facilis rerum veniam voluptatum. Eius ex fuga odio odit provident quidem quisquam reprehenderit saepe sed, temporibus?
-        </p>
-        <p><a href="#" class="button button-fill boton-chico close-popup">Volver</a></p>
+<div class="page " data-page="protur">
 
+    <!-- Navbar -->
+    <div class="navbar">
+        <div class="navbar-inner navbarMenu">
+            <div class="left">
+                <a href="#" class="link back">
+                    <i class="icon icon-back"></i>
+                    <span>Volver</span>
+                </a>
+            </div>
+            <div class="right"><p>Ayuda</p></div>
+
+        </div>
+    </div>
+
+    <div class="pages">
+
+        <div class="content-block">
+            <br>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquam assumenda eligendi, expedita illo labore nostrum quos soluta sunt voluptatibus? Animi consectetur, corporis cupiditate dolor ex in numquam tempore tenetur!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquam assumenda eligendi, expedita illo labore nostrum quos soluta sunt voluptatibus? Animi consectetur, corporis cupiditate dolor ex in numquam tempore tenetur! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid commodi consequatur dolores ducimus error facilis rerum veniam voluptatum. Eius ex fuga odio odit provident quidem quisquam reprehenderit saepe sed, temporibus?
+            </p>
+            <p><a href="#" class="button button-fill boton-chico close-popup">Volver</a></p>
+
+        </div>
     </div>
 </div>
