--- a/SanJuanSaludAPP/www/capsDetail.html
+++ b/SanJuanSaludAPP/www/capsDetail.html
@@ -1,30 +1,45 @@
-<div class="pages"  data-ignore-cache="true">
-    <div class="page no-navbar" data-page="caps-detail">
+
+    <div class="page" data-page="caps-detail">
+
+        <!-- Navbar -->
+        <div class="navbar">
+            <div class="navbar-inner navbarMenu">
+                <div class="left">
+                    <a href="#" class="link back">
+                        <i class="icon icon-back"></i>
+                        <span>Volver</span>
+                    </a>
+                </div>
+                <div class="right"><p>Información del CAPS</p></div>
+
+            </div>
+        </div>
+
         <div class="page-content">
             <div class="content-block">
+                <br>
+                <br>
                 <h3 class="color-h3" id="caps-tittle"></h3>
                 <div id="capsDetail-container">
 
 
                     <div id="caps-basic" style="color: #fff;"> </div>
                     <div id="caps-eyh" class="list-block accordion-list" style="color: #fff;">
-                        <h3 class="color-h3 ">Seleccione una especialidad para consultar horarios:</h3>
+                        <h4 class="color-h3 ">Seleccione una especialidad para consultar horarios:</h4>
 
                         <!--acá van los caps con append por jquery-->
                     </div>
                     <div id="caps-lc" style="color: #fff;">
-                        <h3 class="color-h3">Líneas de Colectivo disponibles</h3>
+                        <h4 class="color-h3">Líneas de Colectivo disponibles</h4>
                     </div>
                     <div id="googleMap" style="width:100%;height:300px;"></div>
-
-                    <a href="#" style="float: left; margin-top: 10px; width: 100%" class="back button button-fill button-raised boton-chico">Volver </a><br>
 
                 </div>
 
             </div>
         </div>
     </div>
-</div>
+
 
 
 
