--- a/SanJuanSaludAPP/www/index.html
+++ b/SanJuanSaludAPP/www/index.html
@@ -20,16 +20,23 @@
     <div class="statusbar-overlay"></div>
     <div class="views">
         <div class="view view-main">
-            <div class = "navbar">
-                <div class = "navbar-inner">
-                    <div class = "left"></div>
-                    <div class = "center"><img class="mainBanner" src="images/mainBanner.svg"></div>
-                    <div class = "right"></div>
-                </div>
-            </div>
+
+
             <div class="pages" data-ignore-cache="true">
 
+
+
                 <div class="page navbar-fixed" data-page = "index">
+
+                    <!--Navigation Bar-->
+                    <div class = "navbar">
+                        <div class = "navbar-inner">
+                            <div class = "left"></div>
+                            <div class = "center"><img class="mainBanner" src="images/mainBanner.svg"></div>
+                            <div class = "right"></div>
+                        </div>
+                    </div>
+                    <!-- FIN Navigation Bar-->
 
                     <div class="page-content">
 
@@ -55,17 +62,20 @@
                                 </div>
                             </div>
                                 <p class="buttons-row">
+                                    <!--Boton centros de salud-->
                                     <a href="#" id="btnCentros" data-ignore-cache="true" class="ac-3 button button-fill button-raised boton" >
                                         
                                         <span><br>Centros <br>de Salud <br> <br><img src="images/btnMap.svg" alt=""></span>
                                     </a>
 
+                                    <!--Boton PROTUR-->
                                     <a href="#" id="btnProtur" data-ignore-cache="true" class="button button-fill button-raised boton">
                                         <span><br>Programar <br>turno<br> <br><img src="images/btnProtur.svg" alt=""></span>
                                     </a>
                                 </p>
                             <div class="row">
                                 <div class="col-100 ">
+                                    <!--Boton ayuda-->
                                     <a href="#" id="btnAyuda" data-ignore-cache="true" class="button button-fill button-raised boton-chico">
                                         <span>Ayuda</span>
                                     </a>
@@ -73,6 +83,8 @@
                                 </div>
                             </div>
                         </div>
+
+                        <!--footer-->
                         <footer style="bottom: 0; ">
                             <div class="row">
                                 <div class="col-100 ">
