--- a/SanJuanSaludAPP/www/GPS.html
+++ b/SanJuanSaludAPP/www/GPS.html
@@ -1,13 +1,26 @@
-<div class="pages " data-ignore-cache="true">
-    <div class="page no-navbar" data-page="mapa">
-        <div class="page-content">
-            <div class="content-block">
-                <h3 class="color-h3">Google Maps:</h3>
+<div class="page" data-page="mapa">
 
-                <a href="#"  class="back button button-fill button-raised boton-chico">Volver </a><br>
-
-                <div id="googleMap" style="width:100%;height:400px;"></div>
+    <!-- Navbar -->
+    <div class="navbar">
+        <div class="navbar-inner navbarMenu">
+            <div class="left">
+                <a href="#" class="link back">
+                    <i class="icon icon-back"></i>
+                    <span>Volver</span>
+                </a>
             </div>
+            <div class="right"><p>Buscar en el mapa</p></div>
+
+        </div>
+    </div>
+
+    <div class="page-content">
+        <div class="content-block">
+            <br>
+            <br>
+
+
+            <div id="googleMap" style="width:100%;height:400px;"></div>
         </div>
     </div>
 </div>
