--- a/SanJuanSaludAPP/www/caps.html
+++ b/SanJuanSaludAPP/www/caps.html
@@ -1,10 +1,24 @@
-<div class="pages"  data-ignore-cache="true">
-    <div class="page no-navbar" data-page="caps">
+
+    <div class="page" data-page="caps">
+
+
+        <!-- Navbar -->
+        <div class="navbar">
+            <div class="navbar-inner navbarMenu">
+                <div class="left">
+                    <a href="#" class="link back">
+                        <i class="icon icon-back"></i>
+                        <span>Volver</span>
+                    </a>
+                </div>
+                <div class="right"><p>Seleccione Centro de Salud</p></div>
+
+            </div>
+        </div>
+
         <div class="page-content">
             <div class="content-block">
-                <h3 class="color-h3">Elija un CAPS:</h3>
-
-                <a href="#"  class="back button button-fill button-raised boton-chico">Volver </a><br>
+                <br>
 
                 <div class="list-block listaBlanca">
 
@@ -18,7 +32,7 @@
             </div>
         </div>
     </div>
-</div>
+
 
 
 
