--- a/SanJuanSaludAPP/www/formularioProtur.html
+++ b/SanJuanSaludAPP/www/formularioProtur.html
@@ -1,125 +1,143 @@
-<div class="popup">
-    <div class="content-block">
+<div class="page " data-page="protur">
 
-        <h4>Ingrese sus datos y un programador de turnos se comunicará con usted.</h4>
+    <!-- Navbar -->
+    <div class="navbar">
+        <div class="navbar-inner navbarMenu">
+            <div class="left">
+                <a href="#" class="link back">
+                    <i class="icon icon-back"></i>
+                    <span>Volver</span>
+                </a>
+            </div>
+            <div class="right"><p>Ingrese sus datos</p></div>
 
-        <div class="list-block">
-            <ul>
-                <!-- Text inputs -->
-                <li>
-                    <div class="item-content">
-                        <div class="item-media"><i class="icon f7-icons">person</i></div>
-                        <div class="item-inner">
+        </div>
+    </div>
 
-                            <div class="item-input">
-                                <input type="text" placeholder="Nombre y Apellido">
+
+    <div class="page-content">
+
+        <div class="content-block">
+
+            <br>
+
+            <div class="list-block">
+                <ul>
+                    <!-- Text inputs -->
+                    <li>
+                        <div class="item-content">
+                            <div class="item-media"><i class="icon f7-icons">person</i></div>
+                            <div class="item-inner">
+
+                                <div class="item-input">
+                                    <input type="text" placeholder="Nombre y Apellido">
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="item-content">
-                        <div class="item-media"><i class="icon f7-icons">email</i></div>
-                        <div class="item-inner">
-                            <div class="item-input">
-                                <input type="email" placeholder="Correo electrónico">
+                    </li>
+                    <li>
+                        <div class="item-content">
+                            <div class="item-media"><i class="icon f7-icons">email</i></div>
+                            <div class="item-inner">
+                                <div class="item-input">
+                                    <input type="email" placeholder="Correo electrónico">
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </li>
-                <!--Teléfono-->
-                <li>
-                    <div class="item-content">
-                        <div class="item-media"><i class="icon f7-icons">telephone</i></div>
-                        <div class="item-inner">
-                            <div class="item-input">
-                                <input class="asdf" type="email" placeholder="Teléfono">
+                    </li>
+                    <!--Teléfono-->
+                    <li>
+                        <div class="item-content">
+                            <div class="item-media"><i class="icon f7-icons">telephone</i></div>
+                            <div class="item-inner">
+                                <div class="item-input">
+                                    <input class="asdf" type="email" placeholder="Teléfono">
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </li>
+                    </li>
 
-                <!--Otro Teléfono-->
-                <li>
-                    <div class="item-content">
-                        <div class="item-media"><i class="icon f7-icons">telephone</i></div>
-                        <div class="item-inner">
-                            <div class="item-input">
-                                <input type="email" placeholder="Otro teléfono (Si es posible)">
+                    <!--Otro Teléfono-->
+                    <li>
+                        <div class="item-content">
+                            <div class="item-media"><i class="icon f7-icons">telephone</i></div>
+                            <div class="item-inner">
+                                <div class="item-input">
+                                    <input type="email" placeholder="Otro teléfono (Si es posible)">
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </li>
+                    </li>
 
-                <!-- Sexo -->
+                    <!-- Sexo -->
 
-                <li>
-                    <label class="label-radio item-content">
-                        <input type="radio" name="my-radio" value="F">
-                        <div class="item-media">
-                            <i class="icon icon-form-radio"></i>
-                        </div>
-                        <div class="item-inner">
-                            <div class="item-title">Femenino</div>
-                        </div>
-                    </label>
-                </li>
-                <li>
-                    <label class="label-radio item-content">
+                    <li>
+                        <label class="label-radio item-content">
+                            <input type="radio" name="my-radio" value="F">
+                            <div class="item-media">
+                                <i class="icon icon-form-radio"></i>
+                            </div>
+                            <div class="item-inner">
+                                <div class="item-title">Femenino</div>
+                            </div>
+                        </label>
+                    </li>
+                    <li>
+                        <label class="label-radio item-content">
 
-                        <input type="radio" name="my-radio" value="F">
-                        <div class="item-media">
-                            <i class="icon icon-form-radio"></i>
-                        </div>
-                        <div class="item-inner">
-                            <div class="item-title">Masculino</div>
-                        </div>
-                    </label>
-                </li>
-                <li>
-                    <label class="label-radio item-content">
+                            <input type="radio" name="my-radio" value="F">
+                            <div class="item-media">
+                                <i class="icon icon-form-radio"></i>
+                            </div>
+                            <div class="item-inner">
+                                <div class="item-title">Masculino</div>
+                            </div>
+                        </label>
+                    </li>
+                    <li>
+                        <label class="label-radio item-content">
 
-                        <input type="radio" name="my-radio" value="F">
-                        <div class="item-media">
-                            <i class="icon icon-form-radio"></i>
-                        </div>
-                        <div class="item-inner">
-                            <div class="item-title">Otra identidad</div>
-                        </div>
-                    </label>
-                </li>
-                <!-- Date -->
-                <li>
-                    <div class="item-content">
-                        <!--<div class="item-media"><i class="icon f7-icons">calendar</i></div>-->
-                        <div class="item-inner">
-                            <div class="item-title label">Nacimiento:</div>
-                            <div class="item-input">
-                                <input type="date" placeholder="Nacimiento" >
+                            <input type="radio" name="my-radio" value="F">
+                            <div class="item-media">
+                                <i class="icon icon-form-radio"></i>
+                            </div>
+                            <div class="item-inner">
+                                <div class="item-title">Otra identidad</div>
+                            </div>
+                        </label>
+                    </li>
+                    <!-- Date -->
+                    <li>
+                        <div class="item-content">
+                            <!--<div class="item-media"><i class="icon f7-icons">calendar</i></div>-->
+                            <div class="item-inner">
+                                <div class="item-title label">Nacimiento:</div>
+                                <div class="item-input">
+                                    <input type="date" placeholder="Nacimiento" >
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </li>
-                <!-- Textarea -->
-                <li class="align-top">
-                    <div class="item-content">
-                        <!--<div class="item-media"><i class="icon f7-icons">chat</i></div>-->
-                        <div class="item-inner">
-                            <div class="item-title label">Comentarios:</div><br>
-                            <div class="item-input">
-                                <textarea></textarea>
+                    </li>
+                    <!-- Textarea -->
+                    <li class="align-top">
+                        <div class="item-content">
+                            <!--<div class="item-media"><i class="icon f7-icons">chat</i></div>-->
+                            <div class="item-inner">
+                                <div class="item-title label">Comentarios:</div><br>
+                                <div class="item-input">
+                                    <textarea></textarea>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </li>
-            </ul>
+                    </li>
+                </ul>
 
-            <p class="buttons-row">
-                <a href="#"  class="close-popup button button-fill button-raised boton-chico">Volver </a>
+
                 <a href="#"  class="button button-fill button-raised boton-chico">Enviar </a>
-            </p>
 
 
+
+        </div>
     </div>
 </div>
 
